<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1255</width>
    <height>974</height>
   </rect>
  </property>
  <property name="minimumSize">
   <size>
    <width>0</width>
    <height>0</height>
   </size>
  </property>
  <property name="maximumSize">
   <size>
    <width>16777215</width>
    <height>1058</height>
   </size>
  </property>
  <property name="font">
   <font>
    <weight>75</weight>
    <bold>true</bold>
   </font>
  </property>
  <property name="mouseTracking">
   <bool>true</bool>
  </property>
  <property name="focusPolicy">
   <enum>Qt::StrongFocus</enum>
  </property>
  <property name="acceptDrops">
   <bool>true</bool>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralWidget">
   <property name="mouseTracking">
    <bool>true</bool>
   </property>
   <property name="acceptDrops">
    <bool>true</bool>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout"/>
  </widget>
  <widget class="QToolBar" name="navigationToolBar">
   <property name="windowTitle">
    <string>navigationToolBar</string>
   </property>
   <property name="movable">
    <bool>false</bool>
   </property>
   <property name="iconSize">
    <size>
     <width>25</width>
     <height>25</height>
    </size>
   </property>
   <property name="floatable">
    <bool>false</bool>
   </property>
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
   <addaction name="actionFront"/>
   <addaction name="actionBack"/>
   <addaction name="actionTop"/>
   <addaction name="actionBottom"/>
   <addaction name="actionLeft"/>
   <addaction name="actionRight"/>
   <addaction name="actionIsometric"/>
   <addaction name="separator"/>
   <addaction name="actionZoom_In"/>
   <addaction name="actionZoom_Out"/>
   <addaction name="actionZoom_All"/>
   <addaction name="actionZoom_Window"/>
   <addaction name="separator"/>
   <addaction name="actionShade"/>
   <addaction name="actionMesh"/>
   <addaction name="actionNode"/>
   <addaction name="actionProfile"/>
   <addaction name="actionFaceNormal"/>
   <addaction name="actionNodeNormal"/>
  </widget>
  <widget class="QStatusBar" name="statusBar"/>
  <widget class="QToolBar" name="selectionToolBar">
   <property name="windowTitle">
    <string>selectionToolBar</string>
   </property>
   <property name="movable">
    <bool>false</bool>
   </property>
   <property name="iconSize">
    <size>
     <width>25</width>
     <height>25</height>
    </size>
   </property>
   <property name="floatable">
    <bool>false</bool>
   </property>
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
   <addaction name="actionSaveSelection"/>
   <addaction name="actionReadSelection"/>
   <addaction name="separator"/>
   <addaction name="actionSelectNode"/>
   <addaction name="actionSelectEdge"/>
   <addaction name="actionSelectFace"/>
   <addaction name="actionSelectFix"/>
   <addaction name="actionSelectHandle"/>
  </widget>
  <widget class="QDockWidget" name="dockWidget">
   <property name="sizePolicy">
    <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
     <width>300</width>
     <height>900</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>300</width>
     <height>524287</height>
    </size>
   </property>
   <attribute name="dockWidgetArea">
    <number>2</number>
   </attribute>
   <widget class="QWidget" name="dockWidgetContents">
    <property name="layoutDirection">
     <enum>Qt::LeftToRight</enum>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <widget class="QLabel" name="label">
         <property name="text">
          <string>Toolpath Width</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QDoubleSpinBox" name="doubleSpinBox_toolpathOffsetValue">
         <property name="minimum">
          <double>1.000000000000000</double>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
        <widget class="QLabel" name="label_2">
         <property name="text">
          <string>Boundary Ring Num</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QSpinBox" name="spinBox_bToolPath_Num">
         <property name="minimum">
          <number>1</number>
         </property>
         <property name="maximum">
          <number>20</number>
         </property>
         <property name="value">
          <number>3</number>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <widget class="QPushButton" name="pushButton_toolpathGeneration">
       <property name="text">
        <string>Toolpath Generation</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="Line" name="line">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QTreeView" name="treeView">
       <property name="enabled">
        <bool>true</bool>
       </property>
       <property name="showDropIndicator" stdset="0">
        <bool>true</bool>
       </property>
       <property name="indentation">
        <number>5</number>
       </property>
       <attribute name="headerVisible">
        <bool>false</bool>
       </attribute>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="pushButton_clearAll">
       <property name="text">
        <string>Clear All</string>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
  </widget>
  <widget class="QMenuBar" name="menuBar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1255</width>
     <height>21</height>
    </rect>
   </property>
   <property name="layoutDirection">
    <enum>Qt::LeftToRight</enum>
   </property>
   <widget class="QMenu" name="menuFile">
    <property name="title">
     <string>File</string>
    </property>
    <addaction name="actionOpen"/>
    <addaction name="actionSave"/>
    <addaction name="actionSaveSelection"/>
    <addaction name="actionReadSelection"/>
   </widget>
   <widget class="QMenu" name="menuView">
    <property name="title">
     <string>View</string>
    </property>
    <addaction name="actionFront"/>
    <addaction name="actionBack"/>
    <addaction name="actionTop"/>
    <addaction name="actionBottom"/>
    <addaction name="actionLeft"/>
    <addaction name="actionRight"/>
    <addaction name="actionIsometric"/>
    <addaction name="separator"/>
    <addaction name="actionZoom_In"/>
    <addaction name="actionZoom_Out"/>
    <addaction name="actionZoom_All"/>
    <addaction name="actionZoom_Window"/>
    <addaction name="separator"/>
    <addaction name="actionShade"/>
    <addaction name="actionMesh"/>
    <addaction name="actionNode"/>
    <addaction name="actionProfile"/>
    <addaction name="separator"/>
    <addaction name="actionShifttoOrigin"/>
   </widget>
   <widget class="QMenu" name="menuSelect">
    <property name="title">
     <string>Select</string>
    </property>
    <addaction name="actionSelectNode"/>
    <addaction name="actionSelectEdge"/>
    <addaction name="actionSelectFace"/>
    <addaction name="separator"/>
    <addaction name="actionSelectFix"/>
    <addaction name="actionSelectHandle"/>
    <addaction name="separator"/>
   </widget>
   <addaction name="menuFile"/>
   <addaction name="menuView"/>
   <addaction name="menuSelect"/>
  </widget>
  <widget class="QToolBar" name="toolBar">
   <property name="windowTitle">
    <string>toolBar</string>
   </property>
   <property name="movable">
    <bool>false</bool>
   </property>
   <property name="floatable">
    <bool>false</bool>
   </property>
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
   <addaction name="actionOpen"/>
   <addaction name="actionSave"/>
  </widget>
  <action name="actionOpen">
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/Open Folder.png</normaloff>:/resource/Open Folder.png</iconset>
   </property>
   <property name="text">
    <string>Open</string>
   </property>
  </action>
  <action name="actionFront">
   <property name="checkable">
    <bool>false</bool>
   </property>
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/Front View.png</normaloff>:/resource/Front View.png</iconset>
   </property>
   <property name="text">
    <string>Front</string>
   </property>
  </action>
  <action name="actionBack">
   <property name="checkable">
    <bool>false</bool>
   </property>
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/Back View.png</normaloff>:/resource/Back View.png</iconset>
   </property>
   <property name="text">
    <string>Back</string>
   </property>
  </action>
  <action name="actionTop">
   <property name="checkable">
    <bool>false</bool>
   </property>
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/Top View.png</normaloff>:/resource/Top View.png</iconset>
   </property>
   <property name="text">
    <string>Top</string>
   </property>
  </action>
  <action name="actionBottom">
   <property name="checkable">
    <bool>false</bool>
   </property>
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/Bottom View.png</normaloff>:/resource/Bottom View.png</iconset>
   </property>
   <property name="text">
    <string>Bottom</string>
   </property>
  </action>
  <action name="actionLeft">
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/Left View.png</normaloff>:/resource/Left View.png</iconset>
   </property>
   <property name="text">
    <string>Left</string>
   </property>
  </action>
  <action name="actionRight">
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/Right View.png</normaloff>:/resource/Right View.png</iconset>
   </property>
   <property name="text">
    <string>Right</string>
   </property>
  </action>
  <action name="actionIsometric">
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/Isometric View.png</normaloff>:/resource/Isometric View.png</iconset>
   </property>
   <property name="text">
    <string>Isometric</string>
   </property>
  </action>
  <action name="actionZoom_In">
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/Zoom In.png</normaloff>:/resource/Zoom In.png</iconset>
   </property>
   <property name="text">
    <string>Zoom In</string>
   </property>
  </action>
  <action name="actionZoom_Out">
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/Zoom Out.png</normaloff>:/resource/Zoom Out.png</iconset>
   </property>
   <property name="text">
    <string>Zoom Out</string>
   </property>
  </action>
  <action name="actionZoom_All">
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/Zoom All.png</normaloff>:/resource/Zoom All.png</iconset>
   </property>
   <property name="text">
    <string>Zoom All</string>
   </property>
  </action>
  <action name="actionZoom_Window">
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/Zoom Window.png</normaloff>:/resource/Zoom Window.png</iconset>
   </property>
   <property name="text">
    <string>Zoom Window</string>
   </property>
  </action>
  <action name="actionShade">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/Shade.png</normaloff>:/resource/Shade.png</iconset>
   </property>
   <property name="text">
    <string>Shade</string>
   </property>
  </action>
  <action name="actionMesh">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/Mesh.png</normaloff>:/resource/Mesh.png</iconset>
   </property>
   <property name="text">
    <string>Mesh</string>
   </property>
  </action>
  <action name="actionNode">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/Node.png</normaloff>:/resource/Node.png</iconset>
   </property>
   <property name="text">
    <string>Node</string>
   </property>
  </action>
  <action name="actionSave">
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/Save as.png</normaloff>:/resource/Save as.png</iconset>
   </property>
   <property name="text">
    <string>Save</string>
   </property>
  </action>
  <action name="actionSelectNode">
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/selectNode.png</normaloff>:/resource/selectNode.png</iconset>
   </property>
   <property name="text">
    <string>Node</string>
   </property>
  </action>
  <action name="actionSelectFace">
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/selectFace.png</normaloff>:/resource/selectFace.png</iconset>
   </property>
   <property name="text">
    <string>Face</string>
   </property>
  </action>
  <action name="actionShifttoOrigin">
   <property name="text">
    <string>Shift to Origin</string>
   </property>
  </action>
  <action name="actionProfile">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/Profile.png</normaloff>:/resource/Profile.png</iconset>
   </property>
   <property name="text">
    <string>Profile</string>
   </property>
  </action>
  <action name="actionFaceNormal">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/FaceNormal.png</normaloff>:/resource/FaceNormal.png</iconset>
   </property>
   <property name="text">
    <string>FaceNormal</string>
   </property>
  </action>
  <action name="actionNodeNormal">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/NodeNormal.png</normaloff>:/resource/NodeNormal.png</iconset>
   </property>
   <property name="text">
    <string>NodeNormal</string>
   </property>
  </action>
  <action name="actionSelectEdge">
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/selectEdge.png</normaloff>:/resource/selectEdge.png</iconset>
   </property>
   <property name="text">
    <string>Edge</string>
   </property>
  </action>
  <action name="actionGenerate">
   <property name="text">
    <string>Generate</string>
   </property>
  </action>
  <action name="actionTest_1">
   <property name="text">
    <string>Test_1</string>
   </property>
  </action>
  <action name="actionSelectFix">
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/selectFix.png</normaloff>:/resource/selectFix.png</iconset>
   </property>
   <property name="text">
    <string>Fix</string>
   </property>
  </action>
  <action name="actionSelectHandle">
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/selectHandle.png</normaloff>:/resource/selectHandle.png</iconset>
   </property>
   <property name="text">
    <string>Handle &amp; Rigid</string>
   </property>
  </action>
  <action name="actionSaveSelection">
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/SaveSelection.png</normaloff>:/resource/SaveSelection.png</iconset>
   </property>
   <property name="text">
    <string>Save selection</string>
   </property>
  </action>
  <action name="actionReadSelection">
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/InputSelection.png</normaloff>:/resource/InputSelection.png</iconset>
   </property>
   <property name="text">
    <string>Read selection</string>
   </property>
  </action>
  <action name="actionSelectChamber">
   <property name="text">
    <string>Select Chamber (SORO)</string>
   </property>
  </action>
  <action name="actionExport_to_Abaqus_model">
   <property name="checkable">
    <bool>false</bool>
   </property>
   <property name="icon">
    <iconset resource="ShapeLab.qrc">
     <normaloff>:/resource/abaqus logo.png</normaloff>:/resource/abaqus logo.png</iconset>
   </property>
   <property name="text">
    <string>Export to Abaqus model</string>
   </property>
  </action>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources>
  <include location="ShapeLab.qrc"/>
 </resources>
 <connections/>
</ui>
